Revision history for Business-SiteCatalyst

v1.2.1  11/11/2012
        Updated repository path. Project moved from SourceForge to GitHub.
        Updated documentation.


v1.2.0  11/10/2012
        Added new Business::SiteCatalyst::Company module, for the 'Company'
            API within SiteCatalyst.
        Refactored to utilize an optional config variable 'api_subdomain' to
            solve problem of some companies connecting to api2.omniture.com
            (vs default of api.omniture.com). Thanks to Gianluca Casati for
            pointing this out.
        Updated Business::SiteCatalyst::Report::cancel() so it actually works.
        Updated documentation.


v1.0.1  04/22/2012
        Updated documentation.


v1.0.0  04/20/2012
        First release.