@@ -35,6 +35,11 @@ and have web services enabled within your account first in order to obtain a web
 services shared secret, as well as agree with the Terms and Conditions for using 
 the API.
 
+See SiteCatalyst API Explorer at
+https://developer.omniture.com/en_US/get-started/api-explorer
+for 'Company' module documentation
+	
+
 	use Business::SiteCatalyst;
 	
 	# Create an object to communicate with Adobe SiteCatalyst
@@ -43,9 +48,6 @@ the API.
 		shared_secret   => 'dummysecret',
 		api_subdomain   => 'api|api2', #optional; default value='api'
 	);
-	
-	# See SiteCatalyst API Explorer at https://developer.omniture.com/en_US/get-started/api-explorer
-	# for Company documentation
 	
 	my $company = $site_catalyst->instantiate_company();
 	
@@ -72,7 +74,8 @@ the API.
 Create a new Business::SiteCatalyst::Company object, which
 will allow retrieval of SiteCatalyst company-specific info.
 
-NOTE: This should not be called directly. Instead, use C<Business::SiteCatalyst->instantiate_company()>.
+NOTE: -This should not be called directly-. Instead, use 
+C<Business::SiteCatalyst->instantiate_company()>.
 
 	my $company = Business::SiteCatalyst::Company->new(
 		$site_catalyst,
@@ -104,7 +107,8 @@ sub new
 
 =head2 get_token_count()
 
-Determine the number of tokens left for your company. You are alloted 10,000 per month.
+Determine the number of tokens left for your company. You are alloted
+10,000 tokens per month.
 
 	my $tokens_left = $company->get_token_count();
 
@@ -134,7 +138,8 @@ sub get_token_count
 
 =head2 get_token_usage()
 
-Information about the company's token usage for the current calendar month.
+Information about the company's token usage for the current calendar month,
+broken down by user account.
 
 	my $token_data = $company->get_token_usage();
 
@@ -210,10 +215,13 @@ sub get_report_suites
 =head2 get_tracking_server()
 
 Returns the tracking server and namespace for the specified report suite.
-If report suite is not specified, 'report_suite_id' in SiteCatalystConfig will be used.
+If report suite is not specified, 'report_suite_id' in SiteCatalystConfig 
+(if one exists) will be used.
 
 	my $tracking_server = $company->get_tracking_server();
-	my $tracking_server = $company->get_tracking_server( report_suite_id => $report_suite_id );
+	my $tracking_server = $company->get_tracking_server( 
+		report_suite_id => $report_suite_id 
+	);
 
 Optional parameters:
 
@@ -378,7 +386,7 @@ sub cancel_queue_item
 
 =head2 get_version_access()
 
-Information about the version of various Adobe services your company has access to.
+Information about the version of various Adobe services you have access to.
 
 	my $version_list = $company->get_version_access();
 
@@ -451,8 +459,9 @@ L<http://search.cpan.org/dist/Business-SiteCatalyst/>
 =head1 ACKNOWLEDGEMENTS
 
 Thanks to ThinkGeek (L<http://www.thinkgeek.com/>) and its corporate overlords
-at Geeknet (L<http://www.geek.net/>), for footing the bill while I write code for them!
-Special thanks for technical help from fellow ThinkGeek CPAN author Guillaume Aubert L<http://search.cpan.org/~aubertg/>
+at Geeknet (L<http://www.geek.net/>), for footing the bill while I write 
+code for them! Special thanks for technical help from fellow ThinkGeek CPAN
+author Guillaume Aubert L<http://search.cpan.org/~aubertg/>
 
 
 =head1 COPYRIGHT & LICENSE
