@@ -1,13 +1,16 @@
 Revision history for Business-SiteCatalyst
 
 v1.2.1  11/11/2012
+        Updated all subs in Business::SiteCatalyst::Company to croak if
+            there is no response from the API method call.
         Updated repository path. Project moved from SourceForge to GitHub.
         Updated documentation.
 
 
 v1.2.0  11/10/2012
         Added new Business::SiteCatalyst::Company module, for the 'Company'
-            API within SiteCatalyst.
+            API within SiteCatalyst. Features include: getting token usage,
+            determine tracking server, report suite list, and more.
         Refactored to utilize an optional config variable 'api_subdomain' to
             solve problem of some companies connecting to api2.omniture.com
             (vs default of api.omniture.com). Thanks to Gianluca Casati for
